DockerConnection model reworked, changes to DockerConnectionService added get and set database connection api/controllers and methods swagger api changed connections.json DB changed TODO: create selectDockerDonnection method       consult database in depth
